# conductor-mcp

./: .gitignore  MCP_PUBLISHING.md  README.md  local_development.py  main.py  pyproject.toml  server.json  server.py  sync_version.py
.github/workflows/: publish-mcp.yml  publish.yml  pull_request.yml
conductor_mcp/: server.py
conductor_mcp/network/: http_proxy.py
conductor_mcp/prompts/: conductor.py
conductor_mcp/resources/: conductor.py
conductor_mcp/test/network/: http_proxy_test.py
conductor_mcp/test/tools/: workflow_test.py
conductor_mcp/tools/: event.py  task.py  workflow.py
network/: http_proxy.py  token_manager.py
test/network/: __init__.py  http_proxy_test.py  orkes_api_test.py  token_manager_test.py
test/tools/: workflow_test.py
tools/: task.py  workflow.py
utils/: constants.py
